[package]
name = "environ"
version = "0.1.0"
edition = "2021"
description = "A simple environment loader and setter"
license = "Apache-2.0"
license-file = "LICENSE.txt"
documentation = "https://github.com/aramnhammer/environ"
homepage = "https://github.com/aramnhammer/environ"
repository = "https://github.com/aramnhammer/environ"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
tempdir = "0.3"
