[package]
name = "envloader"
version = "0.1.0"
edition = "2021"
description = "A simple environment setter"
license-file = "LICENSE"
documentation = "https://github.com/aramnhammer/envloader"
homepage = "https://github.com/aramnhammer/envloader"
repository = "https://github.com/aramnhammer/envloader"

[dependencies]

[dev-dependencies]
tempdir = "0.3"
